# ai-operator-toolkit

./: FUTURE.md  README.md  agents.md  claude.md  decisions.md  pyproject.toml
skills/: explain-like-im-five.md  git-workflow.md  interview-mode.md  tdd-workflow.md
tests/: conftest.py  test_sample.py
