[project]
name = "ai-operator-toolkit"
version = "0.1.0"
description = "A personal operator toolkit for agentic development workflows using Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
verbose = true

[tool.coverage.run]
source = ["skills"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false